# IntegrationprojetC

./: README.md
mergin shit/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  mergin-shit.glade  mergin-shit.glade.bak  mergin-shit.gladep
mergin shit/autom4te.cache/: requests
mergin shit/po/: Makefile
mergin shit/src/: Etudiants.txt  Makefile  Makefile.am  Makefile.in  admins.txt  admins0.txt  authen.txt  callbacks.c  callbacks.h  capteur.txt  dechets.txt  fonction.c  fonction.h  interface.c  interface.c.bak  interface.h  interface.h.bak  login.txt  main.c  mergin-shit  produit.txt  utilisateur.txt
merging/: Makefile  config.status  configure.in  merging.glade  merging.glade.bak  merging.gladep
merging/autom4te.cache/: output.0  requests  traces.0  traces.1
merging/po/: Makefile.in
merging/src/: Etudiants.txt  Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  capteur.txt  fonction.h  interface.c  interface.c.bak  interface.h  loginr.txt  main.c  menus.txt  merging  mouvement.txt  produit.txt  utilisateur.txt
